examples/failing/OrphanInstanceFunDepCycle.purs
-- @shouldFailWith OrphanInstance
module Main where
import Lib
data L
instance clr :: C L R
